      internal tools that are not intended for distribution.
    - Remove autotools-specific artifacts from packages.
    - Remove "dummy" documentation artifacts from llvm-X.Y-docs
      package. Not built/installed by CMake, not useful.
    - Update control/rules to support CMake
    - Patch LLDB SWIG interfaces to workaround a bug in SWIG
      See https://llvm.org/bugs/show_bug.cgi?id=25468

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 28 Dec 2015 09:31:25 +0100

llvm-toolchain-snapshot (1:3.8~svn255217-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Fix an install issue with clang-tidy
  * clang-modernize has been removed. Long live to clang-tidy, its
    replacement

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 10 Dec 2015 05:18:29 +0100

llvm-toolchain-snapshot (1:3.8~svn254193-2) UNRELEASED; urgency=medium

  * disable lldb and polly on powerpc, currently ftbfs.
    setting the lldb archs in debian/control in just one
    place would be appreciated.
  * quoting fixes in debian/rules, when make macros
    are empty
    Thanks to Doko for the two previous changes (Closes: #806729)

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 30 Nov 2015 15:34:12 +0100

llvm-toolchain-snapshot (1:3.8~svn254193-1) unstable; urgency=medium

  * New snapshot release
  * Remove some warnings in the manpages generation (Closes: #795310)
  * Also ship sancov in clang-3.8
  * Fix the links to scan-build-3.8 & scan-view-3.8

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 20 Oct 2015 14:07:06 +0200

llvm-toolchain-snapshot (1:3.8~svn250696-1) unstable; urgency=medium

  * Remove macho-dump from LLVM (removed by upstream r248302)
  * Introduce clang-tidy-3.8 as a separate package. Replaces clang-modernize
  * Ship run-clang-tidy.py & clang-tidy-diff.py in clang-tidy-3.8
  * Remove cpp11-migrate-3.8 package. Has been replaced by clang-modernize
    for a while (which will be replaced by clang-tidy)
  * Add three new symbols in libclang1