@@ -13,6 +13,7 @@ llvm-toolchain-snapshot (1:3.8~svn256489-1~exp1) experimental; urgency=medium
     - Update control/rules to support CMake
     - Patch LLDB SWIG interfaces to workaround a bug in SWIG
       See https://llvm.org/bugs/show_bug.cgi?id=25468
+    - add missing files to clang-format
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 28 Dec 2015 09:31:25 +0100
 
